<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/etNombreM"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etTipoM"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:hint="@string/et_tipo"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etOrigenM"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="154dp"
        android:ems="10"
        android:hint="@string/et_origen"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etNutrientesM"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="220dp"
        android:ems="10"
        android:hint="@string/et_nutrientes"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etFuncionM"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="286dp"
        android:ems="10"
        android:hint="@string/et_funcion"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFuncionM"
        android:layout_alignParentStart="true"
        android:onClick="registrar"
        android:text="@string/btn_registrar" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegistrar"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="13dp"
        android:onClick="limpiar"
        android:text="@string/btn_limpiar" />

    <Button
        android:id="@+id/btnConsultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLimpiar"
        android:layout_alignStart="@+id/btnLimpiar"
        android:layout_marginStart="0dp"
        android:layout_marginTop="11dp"
        android:onClick="consultarAlimento"
        android:text="@string/btn_consultar" />

</RelativeLayout>